<resources>
    <string name="app_name">Music Player</string>
    <string name="splashscreen">splashscreen</string>
    <string name="shuffle">Shuffle All Songs</string>
    <string name="back_button">BackButton</string>
    <string name="song_name">Song Name</string>
    <string name="world_of_music">World of Music</string>
    <string name="like_btn">like_btn</string>
    <string name="playerimage">image</string>
    <string name="playlists">Playlists</string>
    <string name="click_to_forward">click to farward</string>
    <string name="time">00.00</string>
    <string name="pause">tap to pause</string>
    <string name="loading">Loading...</string>
    <string name="click_to_repeat">click to repeat</string>
    <string name="tap_for_equaliser">tap for equaliser</string>
    <string name="tap_for_timer">tap for timer</string>
    <string name="tap_to_share">tap to share</string>
    <string name="click_to_back">click to back</string>
    <string name="click_to_add">click to add</string>
    <string name="back">click to back</string>
    <string name="help">Favourites</string>

    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
</resources>