<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
        <data>
                <variable
                    name="playerViewModel"
                    type="com.example.mymusic.PlayerViewModel" />
        </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            tools:context=".PlayerActivity">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="58dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_btn"
                    app:tint="#101010" />

                <ImageButton
                    android:id="@+id/btn_heart"
                    android:layout_width="58dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/like_btn"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView3"
                    app:srcCompat="@drawable/ic_baseline_favorite_24" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/world_of_music"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                    app:layout_constraintEnd_toStartOf="@+id/btn_heart"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toTopOf="@+id/btn_back" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/song_image"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="100dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/playerimage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:srcCompat="@drawable/img_2" />


                <TextView
                    android:id="@+id/song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_weight="1"
                    android:text="@string/song_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/song_image" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_backward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/click_to_back"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_pause"
                    app:layout_constraintEnd_toStartOf="@+id/btn_pause"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_pause"
                    app:srcCompat="@drawable/back_btn"
                    tools:ignore="RedundantDescriptionCheck" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/click_to_forward"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_pause"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_pause"
                    app:layout_constraintTop_toTopOf="@+id/btn_pause"
                    app:srcCompat="@drawable/farward_btn"
                    tools:ignore="RedundantDescriptionCheck" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:contentDescription="@string/pause"
                    android:focusable="true"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@+id/btn_forward"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_backward"
                    app:layout_constraintTop_toBottomOf="@+id/song_name"
                    app:srcCompat="@drawable/pause_btn" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:contentDescription="@string/pause"
                    android:focusable="true"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@+id/btn_forward"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_backward"
                    app:layout_constraintTop_toBottomOf="@+id/song_name"
                    app:srcCompat="@drawable/play_btn" />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/time"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                    app:layout_constraintEnd_toStartOf="@+id/seekBar"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/seekBar" />

                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/loading"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/seekBar"
                    app:layout_constraintTop_toTopOf="@+id/seekBar" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toStartOf="@+id/end_time"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/start_time"
                    app:layout_constraintTop_toBottomOf="@+id/btn_pause" />

                <ImageButton
                    android:id="@+id/btn_repeat"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/click_to_repeat"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_equaliser"
                    app:layout_constraintEnd_toStartOf="@+id/btn_equaliser"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_equaliser"
                    app:srcCompat="@drawable/repeat_button" />

                <ImageButton
                    android:id="@+id/btn_equaliser"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/tap_for_equaliser"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_timer"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_repeat"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar"
                    app:srcCompat="@drawable/equalizer_btn" />

                <ImageButton
                    android:id="@+id/btn_timer"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/tap_for_timer"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_equaliser"
                    app:layout_constraintEnd_toStartOf="@+id/btn_share"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_equaliser"
                    app:layout_constraintTop_toTopOf="@+id/btn_equaliser"
                    app:srcCompat="@drawable/timer_btn" />

                <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/tap_to_share"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_timer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_timer"
                    app:layout_constraintTop_toTopOf="@+id/btn_timer"
                    app:srcCompat="@drawable/ic_baseline_share_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
